0.9.1+
    README correct packages link
    manual note full/max col widths not saved #382
    adjust maximized and fullscreen behavior #382
    add su-to-root support
    detect rename of current folder and close tab #243
    fix list view auto drag action on drop to last row #387
    add design menu Edit Script; F4 opens script in editor
    task manager absolute height #380
0.9.1   2013-11-06:
    [gtk 3.8] fix run dialog reverts to minimum size
    fix icon change not saved (bookmark, tab, devices, etc) #367
    sakura terminal use -x with single argument
    fix crash in save_settings #369
    new panel config memory #372
    fix build problem on gtk < 2.24 #368
    new root window use HOME=/root incase no env reset
    fix Export from desktop menu
    man panel memory
    task man change default cols to current speed and remain
    fix identification of empty optical drive
    change default device icons
    add lilyterm to emulators list
    remove erroneous files from pkg branch
    README added wiki link Guidelines For Distributing Modifications
    limit evt_win_move events to 5 per second #380
0.9.0   2013-10-22:
    add browse-for options in Rename/New dialog Browse dialog
    run fm Devices menu functions in task man
    let vfs task show run-task missing file errors
    desktop prefs - insensitive wallpaper options if unchecked
    file props dlg - show target type of relative link
    Devices menu activate Open on left-click
    Devices menu activate Remove / Eject on middle-click
    Devices menu add Mount and Unmount
    device remove via desktop shows progress dialog
    fm Devices menu show and obey option Settings|New Tab
    allow HAL eject unmounted
    add HAL unmount optical in addition to eject
    fix HAL duplicate devices listed
    Devices list and menu Mount and Unmount sensitivity
    added desktop option Arrange Icons|Custom
    single-click or right-click on desktop or unselected unselects
    automatic desktop drag action