@@ -4018,14 +4018,17 @@ on_folder_view_button_release_event ( GtkWidget *widget,
     {
         if ( exo_icon_view_is_rubber_banding_active( EXO_ICON_VIEW( widget ) ) )
             return FALSE;
-        tree_path = exo_icon_view_get_path_at_pos( EXO_ICON_VIEW( widget ),
-                                                   event->x, event->y );
-        model = exo_icon_view_get_model( EXO_ICON_VIEW( widget ) );
-        if ( tree_path )
+        if ( app_settings.single_click )
         {
-            // unselect all but one file
-            exo_icon_view_unselect_all( EXO_ICON_VIEW( widget ) );
-            exo_icon_view_select_path( EXO_ICON_VIEW( widget ), tree_path );
+            tree_path = exo_icon_view_get_path_at_pos( EXO_ICON_VIEW( widget ),
+                                                       event->x, event->y );
+            model = exo_icon_view_get_model( EXO_ICON_VIEW( widget ) );
+            if ( tree_path )
+            {
+                // unselect all but one file
+                exo_icon_view_unselect_all( EXO_ICON_VIEW( widget ) );
+                exo_icon_view_select_path( EXO_ICON_VIEW( widget ), tree_path );
+            }
         }
     }
     else if ( file_browser->view_mode == PTK_FB_LIST_VIEW )
